--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@ body {
   font-family: sans-serif;
 }
 
+/* html, body {
+  overflow-x: hidden;
+} */
+
 html, body {
   overflow-x: hidden;
+  width: 100vw;
+}
+
+body {
+  padding-top: 40px;
 }
